--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/runtime-dom": "^3.5.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.0",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vue-cli": "^2.9.6",
     "vue-tsc": "^2.0.21"
   }
 }
